# root

./: .travis.yml  CMakeLists.txt  azure-pipelines.yml
builtins/zeromq/: CMakeLists.txt
builtins/zeromq/cppzmq/: CMakeLists.txt
builtins/zeromq/libzmq/: CMakeLists.txt
cmake/modules/: FindZeroMQ.cmake  Findcppzmq.cmake  RootBuildOptions.cmake  SearchInstalledSoftware.cmake
gui/webdisplay/inc/: LinkDef.h
math/mathcore/inc/Fit/: Chi2FCN.h  FcnAdapter.h  FitUtil.h  LogLikelihoodFCN.h  PoissonLikelihoodFCN.h  UnBinData.h
math/mathcore/inc/Math/: AdaptiveIntegratorMultiDim.h  BasicMinimizer.h  DistSampler.h  FitMethodFunction.h  Functor.h  IFunction.h  IParamFunction.h  IntegratorMultiDim.h  MinimTransformFunction.h  Minimizer.h  Util.h  VirtualIntegrator.h  WrappedFunction.h
math/mathcore/src/: AdaptiveIntegratorMultiDim.cxx  BasicMinimizer.cxx  DistSampler.cxx  FitUtil.cxx  Fitter.cxx  MinimTransformFunction.cxx
math/mathcore/test/: testKahan.cxx
math/minuit2/: CMakeLists.txt
math/minuit2/inc/Minuit2/: FCNAdapter.h  FCNGradAdapter.h  FCNGradientBase.h  GenericFunction.h  LAVector.h  MinimumError.h  MnUserTransformation.h  NumericalDerivator.h
math/minuit2/src/: AnalyticalGradientCalculator.cxx  InitialGradientCalculator.cxx  MnPrint.cxx  MnSeedGenerator.cxx  MnUserTransformation.cxx  ModularFunctionMinimizer.cxx  NegativeG2LineSearch.cxx  Numerical2PGradientCalculator.cxx  NumericalDerivator.cxx  SinParameterTransformation.cxx  SqrtLowParameterTransformation.cxx  SqrtUpParameterTransformation.cxx  VariableMetricBuilder.cxx
math/minuit2/test/MnTutorial/: Quad1F.h  Quad4F.h
roofit/: CMakeLists.txt
roofit/histfactory/inc/: LinkDef.h
roofit/multiprocess/: CMakeLists.txt
roofit/multiprocess/inc/RooFit/MultiProcess/: Config.h  Job.h  JobManager.h  Messenger.h  Messenger_decl.h  Queue.h  util.h
roofit/multiprocess/res/RooFit/MultiProcess/: Job.h  Messenger.h  Messenger_decl.h  ProcessManager.h  ProcessTimer.h  Queue.h  types.h  worker.h
roofit/multiprocess/src/: Config.cxx  Job.cxx  JobManager.cxx  Messenger.cxx  PriorityQueue.cxx  ProcessManager.cxx  ProcessTimer.cxx  Queue.cxx  util.cxx  worker.cxx
roofit/multiprocess/test/: CMakeLists.txt  test_Job.cxx  test_Messenger.cxx  test_ProcessManager.cxx  test_worker.cxx  utils.h
roofit/roofit/inc/: LinkDef1.h
roofit/roofitZMQ/: CMakeLists.txt
roofit/roofitZMQ/inc/RooFit_ZMQ/: Utility.h  ZeroMQPoller.h  ZeroMQSvc.h  functions.h  ppoll.h
roofit/roofitZMQ/res/RooFit_ZMQ/: ZeroMQSvc.h  functions.h
roofit/roofitZMQ/src/: ZeroMQPoller.cpp  ZeroMQSvc.cpp  functions.cpp  ppoll.cpp
roofit/roofitZMQ/test/: CMakeLists.txt  test_HWM.cxx  test_ZMQ.cpp  test_ZMQ_load_balancing.cxx  test_mkstemp.cxx  test_polling.cxx
roofit/roofitcore/: CMakeLists.txt
roofit/roofitcore/inc/: BidirMMapPipe.h  LinkDef.h  LinkDef2.h  NumericalDerivatorMinuit2.h  RooAbsArg.h  RooAbsData.h  RooAbsMinimizerFcn.h  RooAbsOptTestStatistic.h  RooAbsPdf.h  RooAbsReal.h  RooAbsTestStatistic.h  RooAddition.h  RooChi2Var.h  RooDataHist.h  RooDataWeightedAverage.h  RooFitResult.h  RooGlobalFunc.h  RooGradMinimizerFcn.h  RooGradientFunction.h  RooMinimizer.h  RooMinimizerFcn.h  RooMinimizer_impl.h  RooNLLVar.h  RooRealIntegral.h  RooRealMPFE.h  RooTimer.h  RooTrace.h  RooXYChi2Var.h
roofit/roofitcore/inc/MultiProcess/: BidirMMapPipe.h  TaskManager.h
roofit/roofitcore/inc/RooFit/TestStatistics/: LikelihoodGradientWrapper.h  LikelihoodWrapper.h
roofit/roofitcore/inc/TestStatistics/: LikelihoodGradientJob.h  LikelihoodJob.h  MinuitFcnGrad.h
roofit/roofitcore/res/TestStatistics/: LikelihoodGradientJob.h  LikelihoodJob.h
roofit/roofitcore/src/: BidirMMapPipe.cxx  BidirMMapPipe.h  NumericalDerivatorMinuit2.cxx  RooAbsArg.cxx  RooAbsMinimizerFcn.cxx  RooAbsMinimizerFcn.h  RooAbsOptTestStatistic.cxx  RooAbsPdf.cxx  RooAbsReal.cxx  RooAbsTestStatistic.cxx  RooChi2Var.cxx  RooDataWeightedAverage.cxx  RooGlobalFunc.cxx  RooGradMinimizerFcn.cxx  RooGradientFunction.cxx  RooJsonListFile.cxx  RooLinkedList.cxx  RooMinimizer.cxx  RooMinimizerFcn.cxx  RooMinimizerFcn.h  RooNLLVar.cxx  RooProduct.cxx  RooRealIntegral.cxx  RooRealMPFE.cxx  RooRealSumPdf.cxx  RooRealVar.cxx  RooTimer.cxx  RooTrace.cxx
roofit/roofitcore/src/MultiProcess/: BidirMMapPipe.cxx  Job.cxx  NLLVar.cxx  TaskManager.cxx
roofit/roofitcore/src/TestStatistics/: ConstantTermsOptimizer.cxx  ConstantTermsOptimizer.h  LikelihoodGradientJob.cxx  LikelihoodGradientJob.h  LikelihoodGradientWrapper.cxx  LikelihoodHessianJob.cxx  LikelihoodHessianJob.h  LikelihoodJob.cxx  LikelihoodJob.h  LikelihoodSerial.cxx  LikelihoodWrapper.cxx  MinuitFcnGrad.cxx  MinuitFcnGrad.h  RooAbsL.cxx  RooBinnedL.cxx  RooRealL.cxx  RooSubsidiaryL.cxx  RooSumL.cxx  RooUnbinnedL.cxx
roofit/roofitcore/test/: CMakeLists.txt  MultiProcess_Vector.cxx  RooGradMinimizer.cxx  testBenchmarkCallgrind.cxx  testBidirMMapPipe.cxx  testNaNPacker.cxx  testTest.cxx
roofit/roofitcore/test/TestStatistics/: bench.cpp  bench_hcomb.cpp  bench_serial.cpp  bench_serial_hcomb.cpp  testLikelihoodGradientJob.cpp  testLikelihoodGradientJob.cxx  testLikelihoodHessianJob.cxx  testLikelihoodJob.cxx  testLikelihoodSerial.cxx  testRooAbsL.cxx
tutorials/roofit/: rf502_workspace.root  rf502_wspacewrite.C  rf605_profilell.C
tutorials/v7/: draw_rh1.cxx  draw_rh2_large.cxx
